cmake_minimum_required(VERSION 3.28)
project(Homework_6)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(.idea)

add_executable(Homework_6
        .idea/.gitignore
        .idea/Homework-6.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp)
